--- a/style.css
+++ b/style.css
@@ -114,6 +114,13 @@ body {
     display: inline-block;
   }  
 
+  #tagDropdown {
+  background-color: white;
+  border: none;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  cursor: pointer;
+}
+
   @keyframes textGradientShift {
     0% {
       background-position: 0% 50%;
@@ -125,4 +132,15 @@ body {
       background-position: 0% 50%;
     }
   }
-  
+
+  .logo-link {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1000;
+}
+
+.logo-img {
+  height: 40px;
+  width: auto;
+}
